demo 2 strategy pagination
